# Peapod

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: backend.yml  build.yml  frontend.yml
src/: control.ts  global.d.ts  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/utils/: args.rs  config.rs  log.rs  mod.rs  paths.rs  platform.rs
src-tauri/src/window/: events.rs  html.rs  mod.rs
src/css/: extra.css
src/html/: topbar.html
src/util/: cleanup.ts  extra.ts  wait.ts
